tests/ui/rfcs/rfc-2632-const-trait-impl/call-const-trait-method-pass.stderr
error[E0015]: cannot call non-const operator in constants
  --> $DIR/call-const-trait-method-pass.rs:39:22
   |
LL | const ADD_INT: Int = Int(1i32) + Int(2i32);
   |                      ^^^^^^^^^^^^^^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $DIR/call-const-trait-method-pass.rs:7:1
   |
LL | impl const std::ops::Add for Int {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(effects)]` to the crate attributes to enable

error[E0015]: cannot call non-const fn `<i32 as Plus>::plus` in constant functions
  --> $DIR/call-const-trait-method-pass.rs:36:7
   |
LL |     a.plus(b)
   |       ^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(effects)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
